fix(ui): wrap text in markdown

--- a/packages/ui/src/css/style.css
+++ b/packages/ui/src/css/style.css
@@ -25,3 +25,11 @@
 .sapMScrollBarOuterDiv {
 	height: auto;
 }
+
+/*
+ * wrap code text in markdown
+ */
+.wrapCodeText code {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
